# Pacifica_AI_Bot

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  render_trader.py  requirements.txt  tsconfig.base.json
apps/web/: .env.local.example  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: dashboard-console.tsx  globals.css  layout.tsx  live-market-workspace.tsx  marketing-landing.tsx  page.tsx
apps/web/lib/: api.ts  browser-wallet.ts
apps/web/public/charting_library/: README.md
docs/: architecture.md  enterprise-roadmap.md
scripts/: dev.js
services/trader/: .env.example  README.md  pyproject.toml  requirements.txt
services/trader/app/: __init__.py  config.py  contracts.py  main.py
services/trader/app/api/: routes.py
services/trader/app/core/: audit.py  logging.py  middleware.py
services/trader/app/pacifica/: __init__.py  client.py  execution.py  market_data.py  models.py
services/trader/app/risk/: manager.py
services/trader/app/runtime/: __init__.py  engine.py  persistence.py  state.py
services/trader/app/strategy/: ml_model.py  price_action.py
services/trader/app/training/: __main__.py  cli.py  collector.py  dataset_loader.py  store.py
