[project]
name = "pacifica-trader"
version = "0.1.0"
description = "Pacifica price action trading engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "base58>=2.1.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "solders>=0.19.0",
  "uvicorn[standard]>=0.30.6",
  "websockets>=12.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
